--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,3 @@
-# top-most EditorConfig file
 root = true
 
 # Unix-style newlines with a newline ending and UTF-8 in every file
@@ -7,13 +6,10 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 
-# Matches multiple files with brace expansion notation
-# Set default charset
 [*.{cpp,h}]
-indent_style = space
+indent_style = tab
 indent_size = 4
 
-# Tab indentation (no size specified)
 [Makefile]
 charset = utf-8
 indent_style = tab
