--- a/platformio.ini
+++ b/platformio.ini
@@ -12,14 +12,10 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps =
-   s00500/ESPUI@^2.2.4
-   teemuatlut/TMCStepper@^0.7.3
-
-; lib_deps =
-;     ESPUI
-;     ESP Async WebServer
-;     ESPAsyncTCP # (or AsyncTCP on ESP32)
-;     LittleFS_esp32
-
+lib_deps = 
+	s00500/ESPUI@^2.2.4
+	teemuatlut/TMCStepper@^0.7.3
+	gin66/FastAccelStepper@^0.31.5
+	madhephaestus/ESP32Servo@^3.0.6
 monitor_speed = 115200
+upload_speed = 921600
