setup LCD and drawing

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,5 +18,6 @@ lib_deps =
 	gin66/FastAccelStepper@^0.31.5
 	madhephaestus/ESP32Servo@^3.0.6
 	thomasfredericks/Bounce2@^2.72
+	olikraus/U8g2@^2.36.5
 monitor_speed = 115200
 upload_speed = 921600
