--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,6 @@ lib_deps =
 	teemuatlut/TMCStepper@^0.7.3
 	gin66/FastAccelStepper@^0.31.5
 	madhephaestus/ESP32Servo@^3.0.6
+	thomasfredericks/Bounce2@^2.72
 monitor_speed = 115200
 upload_speed = 921600
