working hspi for LCD (using VSPI)

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,4 @@ lib_deps =
 	thomasfredericks/Bounce2@^2.72
 	olikraus/U8g2@^2.36.5
 monitor_speed = 115200
-upload_speed = 921600
+; upload_speed = 921600
